k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: task-management-frontend
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: task-management-frontend
